
- Apache2Handler:
  . Fixed bug #75882 (a simple way for segfaults in threadsafe php just with
    configuration). (Anatol)

- PGSQL:
  . Fixed bug #75838 (Memory leak in pg_escape_bytea()). (ard_1 at mail dot ru)

- Phar:
  . Fixed bug #54289 (Phar::extractTo() does not accept specific directories to
    be extracted). (bishop)

- ODBC:
  . Fixed bug #73725 (Unable to retrieve value of varchar(max) type). (Anatol)

- Opcache:
  . Fixed bug #75729 (opcache segfault when installing Bitrix). (Nikita)
  . Fixed bug #75893 (file_get_contents $http_response_header variable bugged
    with opcache). (Nikita)

- SPL:
  . Fixed bug #74519 (strange behavior of AppendIterator). (jhdxr)

- Standard:
  . Fixed bug #75916 (DNS_CAA record results contain garbage). (Mike,
    Philip Sharp)

01 Feb 2018, PHP 7.2.2

- Core:
  . Fixed bug #75742 (potential memleak in internal classes's static members).
    (Laruence)
  . Fixed bug #75679 (Path 260 character problem). (Anatol)
  . Fixed bug #75614 (Some non-portable == in shell scripts). (jdolecek)
  . Fixed bug #75786 (segfault when using spread operator on generator passed
    by reference). (Nikita)
  . Fixed bug #75799 (arg of get_defined_functions is optional). (carusogabriel)
  . Fixed bug #75396 (Exit inside generator finally results in fatal error).
    (Nikita)

- FCGI:
  . Fixed bug #75794 (getenv() crashes on Windows 7.2.1 when second parameter is
    false). (Anatol)

- IMAP:
  . Fixed bug #75774 (imap_append HeapCorruction). (Anatol)

- Opcache:
  . Fixed bug #75720 (File cache not populated after SHM runs full). (Dmitry)
  . Fixed bug #75687 (var 8 (TMP) has array key type but not value type).
    (Nikita, Laruence)
  . Fixed bug #75698 (Using @ crashes php7.2-fpm). (Nikita)
  . Fixed bug #75579 (Interned strings buffer overflow may cause crash).
    (Dmitry)

- PDO:
  . Fixed bug #75616 (PDO extension doesn't allow to be built shared on Darwin).
    (jdolecek)

- PDO MySQL: