@@ -15,6 +15,8 @@ PHP                                                                        NEWS
 - Phar:
   . Fixed bug #54289 (Phar::extractTo() does not accept specific directories to
     be extracted). (bishop)
+  . Fixed bug #65414 (deal with leading slash while adding files correctly). 
+    (bishopb)
 
 - ODBC:
   . Fixed bug #73725 (Unable to retrieve value of varchar(max) type). (Anatol)
